--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import './components/container';
 @import './components/section';
 @import './utils/hidden';
+@import './utils/placeholder';
+@import './utils/mixins';
 
 /* ----------------NAV---------------- */
 @import './components/header';
