--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,44 +1,38 @@
-.advantages-section {
+.advantages {
 	padding-bottom: 0;
 }
 
-.advantages-list {
+.advantages__list {
 	margin-left: -30px;
 	margin-top: -30px;
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.advantages-item {
+.advantages__item {
 	flex-basis: calc(100% / 4 - 30px);
 	margin-left: 30px;
 	margin-top: 30px;
 }
 
-.advantages-icon {
+.advantages__icon {
+	@extend %stance-list;
+	
 	margin-bottom: 30px;
 	background-color: var(--secondary-bg-color);
 	width: 270px;
 	height: 120px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	border-radius: 4px;
 }
 
-.advantages-title {
+.advantages__title {
 	margin-bottom: 10px;
 	color: var(--primary-text-color);
-	font-size: 14px;
-	font-weight: 700;
-	line-height: 1.14;
-	letter-spacing: 0.03em;
+	@include fonts(700, 14px, 1.14, 0.03em);
 	text-transform: uppercase;
 }
 
-.advantages-description {
+.advantages__description {
 	color: var(--secondary-text-color);
-	font-size: 14px;
-	line-height: 1.7;
-	letter-spacing: 0.03em;
+	@include fonts(400, 14px, 1.7, 0.03em);
 }
