--- a/sass/components/_hero-modal.scss
+++ b/sass/components/_hero-modal.scss
@@ -26,14 +26,12 @@
 	transform: scale(1) translate(-50%, -50%);
 }
 
-.hero-modal-close {
+.hero-modal__close-button {
 	position: absolute;
 	top: 8px;
 	right: 8px;
 
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	@extend %stance-list;
 
 	width: 30px;
 	height: 30px;
@@ -51,22 +49,19 @@
 	}
 }
 
-.hero-modal-title {
+.hero-modal__title {
 	display: block;
 	margin-bottom: 12px;
 
-	font-weight: 700;
-	font-size: 20px;
-	line-height: 1.15;
-	letter-spacing: 0.03em;
+	@include fonts(700, 20px, 1.15, 0.03em);
 	color: var(--primary-text-color);
 }
 
-.hero-form-wrap {
+.hero-modal__wrap--bottom-margin {
 	margin-bottom: 20px;
 }
 
-.hero-modal-wrap {
+.hero-modal__form {
 	position: relative;
 
 	display: flex;
@@ -77,18 +72,16 @@
 	}
 }
 
-.hero-modal-label {
+.hero-modal__label {
 	display: block;
 	text-align: left;
 	margin-bottom: 4px;
 
-	font-size: 12px;
-	line-height: 1.16;
-	letter-spacing: 0.01em;
+	@include fonts(400, 12px, 1.16, 0.01em);
 	color: var(--secondary-text-color);
 }
 
-.hero-modal-input {
+.hero-modal__input {
 	padding: 0;
 	margin: 0;
 
@@ -107,18 +100,18 @@
 	}
 }
 
-.hero-input-icon {
+.hero-modal__input-icon {
 	position: absolute;
 	top: 50%;
 	left: 12px;
 	transition: fill 250ms var(--cubic-value);
 
-	.hero-modal-input:focus + & {
+	.hero-modal__input:focus + & {
 		fill: var(--accent-color);
 	}
 }
 
-.hero-modal-textarea {
+.hero-modal__textarea {
 	width: 100%;
 	height: 120px;
 
@@ -135,32 +128,28 @@
 	}
 
 	&::placeholder {
-		font-size: 14px;
-		line-height: 1.14;
-		letter-spacing: 0.01em;
+		@include fonts(400, 14px, 1.14, 0.01em);
 	
 		color: rgba(117, 117, 117, 0.5);
 	}
 }
 
-.hero-modal-policy {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.modal-policy {
+	@extend %stance-list;
+}
 
+.modal-policy--bottom-margin {
 	margin-bottom: 30px;
 }
 
-.modal-policy {
+.modal-policy__label {
 	display: flex;
 	align-items: center;
 
-	font-size: 14px;
-	line-height: 1.7;
-	letter-spacing: 0.03em;
+	@include fonts(400, 14px, 1.7, 0.03em);
 	color: var(--secondary-text-color);
 
-	.policy-icon {
+	.modal-policy__icon-check {
 		display: flex;
 		align-items: center;
 	
@@ -172,25 +161,23 @@
 	}
 }
 
-.policy-icon-check {
+.modal-policy__icon-check {
 	fill: #ffffff;
 }
 
-.modal-policy-check:checked + .modal-policy .policy-icon {
+.hero-modal-policy__check:checked + .modal-policy__label .modal-policy__icon-check {
 	background-color: var(--accent-color);
 	border: none;
 	transition: background-color 250ms var(--cubic-value);
 }
 
-.modal-link {
-	font-size: 14px;
-	line-height: 1.7;
-	letter-spacing: 0.03em;
+.modal-policy__link {
+	@include fonts(400, 14px, 1.7, 0.03em);
 	text-decoration-skip-ink: none;
 	color: var(--accent-color);
 }
 
-.hero-modal-submit {
+.modal-policy__submit-button {
 	padding: 10px 55px;
 	min-width: 200px;
 
@@ -199,10 +186,7 @@
 	border-radius: 4px;
 	border: 1px solid transparent;
 	cursor: pointer;
-	font-size: 16px;
-	font-weight: 700;
-	line-height: 1.8;
-	letter-spacing: 0.06em;
+	@include fonts(700, 16px, 1.8, 0.06em);
 	
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	transition: background-color 250ms var(--cubic-value),box-shadow 250ms var(--cubic-value);
