--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,4 @@
-.hero-section {
+.hero {
 	text-align: center;
 
 	padding: 200px 0;
@@ -13,7 +13,7 @@
 	background-size: cover;
 }
 
-.hero-title {
+.hero__title {
 	margin-bottom: 30px;
 	margin-left: auto;
 	margin-right: auto;
@@ -21,13 +21,10 @@
 
 	color: var(--white-text-color);
 	text-transform: uppercase;
-	font-weight: 900;
-	font-size: 44px;
-	line-height: 1.36;
-	letter-spacing: 0.06em;
+	@include fonts(900, 44px, 1.36, 0.06em);
 }
 
-.hero-button {
+.hero__button {
 	display: inline-block;
 	padding: 10px 32px;
 	min-width: 200px;
@@ -38,10 +35,7 @@
 	border: 1px solid transparent;
 	box-sizing: border-box;
 	cursor: pointer;
-	font-size: 16px;
-	font-weight: 700;
-	line-height: 1.8;
-	letter-spacing: 0.06em;
+	@include fonts(700, 16px, 1.8, 0.06em);
 
 	transition: background-color 250ms var(--cubic-value);
 	
