--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,5 +1,13 @@
-.team-section {
+.team {
 	background-color: var(--secondary-bg-color);
+}
+
+.team__title {
+	margin-bottom: 50px;
+
+	color: var(--primary-text-color);
+	@include fonts(700, 36px, 1.16, 0.03em);
+	text-align: center;
 }
 
 .team-list {
@@ -7,7 +15,7 @@
 	flex-wrap: wrap;
 }
 
-.team-item {
+.team-list__item {
 	box-shadow: var(--card-shadow);
 	border-radius: 0px 0px 4px 4px;
 
@@ -16,18 +24,7 @@
 	}
 }
 
-.team-title {
-	margin-bottom: 50px;
-
-	color: var(--primary-text-color);
-	font-weight: 700;
-	font-size: 36px;
-	line-height: 1.16;
-	text-align: center;
-	letter-spacing: 0.03em;
-}
-
-.team-text-card {
+.team-list__wrap {
 	padding-top: 30px;
 	padding-bottom: 30px;
 
@@ -36,30 +33,26 @@
 	border-radius: 0px 0px 4px 4px;
 }
 
-.team-title-member {
+.team-list__title {
 	margin-bottom: 10px;
 
 	color: var(--primary-text-color);
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.18;
-	letter-spacing: 0.03em;
+	@include fonts(500, 16px, 1.18, 0.03em);
 }
 
-.team-description {
-	color: var(--secondary-text-color);
-	font-size: 16px;
-	line-height: 1.18;
-	letter-spacing: 0.03em;
+.team-list__description {
 	margin-bottom: 16px;
+	
+	color: var(--secondary-text-color);
+	@include fonts(400, 16px, 1.18, 0.03em);
 }
 
-.team-social-list {
+.socials {
 	display: flex;
 	justify-content: center;
 }
 
-.team-social-item {
+.socials__item {
 	width: 44px;
 	height: 44px;
 
@@ -68,13 +61,12 @@
 	}
 }
 
-.team-social-link {
+.socials__link {
+	@extend %stance-list;
+	
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	background-color: var(--wite-bg-color);
 	color: var(--icons-color);
 
@@ -87,6 +79,6 @@
 	}
 }
 
-.team-social-icon {
+.socials__icon {
 	fill: currentColor;
 }
