--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './utils/hidden';
 @import './utils/placeholder';
 @import './utils/mixins';
+@import './components/section-title';
 
 /* ----------------NAV---------------- */
 @import './components/header';
