--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,8 +1,8 @@
-.advantages {
+.section--no-padding-bottom {
 	padding-bottom: 0;
 }
 
-.advantages__list {
+.advantages {
 	margin-left: -30px;
 	margin-top: -30px;
 	display: flex;
