--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,12 +1,4 @@
-.clients__title {
-	margin-bottom: 50px;
-
-	color: var(--primary-text-color);
-	@include fonts(700, 36px, 1.16, 0.03em);
-	text-align: center;
-}
-
-.clients__list {
+.clients {
 	display: flex;
 }
 
