--- a/sass/components/_filter-nav.scss
+++ b/sass/components/_filter-nav.scss
@@ -1,17 +1,17 @@
-.filter-nav--bottom-margin {
+.filter--bottom-margin {
 	margin-bottom: 50px;
 }
 
-.filter-nav__list {
+.filter {
 	display: flex;
 	justify-content: center;
 }
 
-.filter-nav__item:not(:last-child) {
+.filter__item:not(:last-child) {
 	margin-right: 8px;
 }
 
-.filter-nav__buttons {
+.filter__buttons {
 	padding: 6px 22px;
 	background-color: var(--secondary-bg-color);
 	color: var(--primary-text-color);
