--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,4 +1,4 @@
-.projects__list {
+.projects {
 	display: flex;
 	flex-wrap: wrap;
 
@@ -23,12 +23,12 @@
 	}
 }
 
-.projects-image__wrap {
+.projects__wrap {
 	position: relative;
 	overflow: hidden;
 }
 
-.projects-image__text {
+.projects__text {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -47,20 +47,20 @@
 	}
 }
 
-.projects-text__wrap {
+.projects__thumb {
 	padding: 20px 24px;
 	border-left: 1px solid #eeeeee;
 	border-right: 1px solid #eeeeee;
 	border-bottom: 1px solid #eeeeee;
 }
 
-.projects-text__title {
+.projects__title {
 	margin-bottom: 4px;
 	color: var(--primary-text-color);
 	@include fonts(700, 18px, 2, 0.06em);
 }
 
-.projects-text__description {
+.projects__description {
 	color: var(--secondary-text-color);
 	@include fonts(400, 16px, 1.87, 0.03em);
 }
