--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,21 +1,13 @@
-.team {
+.section--team-background {
 	background-color: var(--secondary-bg-color);
 }
 
-.team__title {
-	margin-bottom: 50px;
-
-	color: var(--primary-text-color);
-	@include fonts(700, 36px, 1.16, 0.03em);
-	text-align: center;
-}
-
-.team-list {
+.team {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.team-list__item {
+.team__item {
 	box-shadow: var(--card-shadow);
 	border-radius: 0px 0px 4px 4px;
 
@@ -24,7 +16,7 @@
 	}
 }
 
-.team-list__wrap {
+.team__wrap {
 	padding-top: 30px;
 	padding-bottom: 30px;
 
@@ -33,14 +25,14 @@
 	border-radius: 0px 0px 4px 4px;
 }
 
-.team-list__title {
+.team__title {
 	margin-bottom: 10px;
 
 	color: var(--primary-text-color);
 	@include fonts(500, 16px, 1.18, 0.03em);
 }
 
-.team-list__description {
+.team__description {
 	margin-bottom: 16px;
 	
 	color: var(--secondary-text-color);
