--- a/sass/components/_we-make.scss
+++ b/sass/components/_we-make.scss
@@ -1,4 +1,4 @@
-.we-make__list {
+.we-make {
 	display: flex;
 }
 
@@ -8,13 +8,6 @@
 	&:not(:last-child) {
 		margin-right: 30px;
 	}
-}
-
-.we-make__title {
-	margin-bottom: 50px;
-	color: var(--primary-text-color);
-	@include fonts(700, 36px, 1.16, 0.03em);
-	text-align: center;
 }
 
 .we-make__description {
